--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "file-saver": "^2.0.5",
+    "jspdf": "^3.0.4",
     "lucide-react": "^0.555.0",
     "next": "16.0.6",
     "react": "19.2.0",
