--- a/package.json
+++ b/package.json
@@ -27,14 +27,14 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.20",  // <-- Verifica que esté
     "eslint": "^9",
     "eslint-config-next": "16.0.6",
-    "tailwindcss": "^4",
+    "postcss": "^8.4.41",        // <-- Verifica que esté
+    "tailwindcss": "^3.4.0",     // <-- Debe ser v3.x
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
