--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "autoprefixer": "^10.4.20",  // <-- Verifica que esté
+    "autoprefixer": "^10.4.20",  
     "eslint": "^9",
     "eslint-config-next": "16.0.6",
-    "postcss": "^8.4.41",        // <-- Verifica que esté
-    "tailwindcss": "^3.4.0",     // <-- Debe ser v3.x
+    "postcss": "^8.4.41",        
+    "tailwindcss": "^3.4.0",     
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
