--- a/package.json
+++ b/package.json
@@ -27,14 +27,15 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "autoprefixer": "^10.4.20",  
+    "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "16.0.6",
-    "postcss": "^8.4.41",        
-    "tailwindcss": "^3.4.0",     
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.0",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
