--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.555.0",
     "next": "^16.0.7",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "stripe": "^20.0.0",
     "tailwind-merge": "^3.4.0",
     "xlsx": "^0.18.5",
@@ -39,8 +39,8 @@
     "@types/file-saver": "^2.0.7",
     "@types/jest": "^29.5.8",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "16.0.6",
