--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "eslint",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "cypress": "cypress open",
+    "cypress:run": "cypress run",
+    "cypress:headless": "cypress run --headless",
+    "test:e2e": "start-server-and-test dev http://localhost:3000 cypress:headless"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.71.0",
@@ -27,7 +31,7 @@
     "next": "^16.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "stripe": "^20.1.0",
+    "stripe": "^20.0.0",
     "tailwind-merge": "^3.4.0",
     "xlsx": "^0.18.5",
     "zod": "^3.22.4"
@@ -42,11 +46,13 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.20",
+    "cypress": "^13.6.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.6",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.41",
+    "start-server-and-test": "^2.0.3",
     "tailwindcss": "^3.4.0",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
