--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,10 @@
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
+    "types": [
+      "jest",
+      "@testing-library/jest-dom"
+    ],
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
