--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "next": "14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "resend": "^6.6.0",
     "stripe": "^20.1.0",
     "tailwind-merge": "^3.4.0",
     "xlsx": "^0.18.5",
